moved the \cocoversion command from the automatically generated LaTeX commands for the caption texts to the LaTeX templates in order to be able to add text more easily, solving #1884

--- a/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBLSarticle.tex
@@ -298,7 +298,7 @@ unsuccessful trial under consideration.
 \pptablefooter
 \end{minipage}}
 
-\caption[Table of ERTs]{\label{tab:ERTs80}\bbobpptablecaption{dimension $80$}
+\caption[Table of ERTs]{\label{tab:ERTs80}\bbobpptablecaption{dimension $80$} \cocoversion
 }
 \end{table*}
 
@@ -353,7 +353,7 @@ unsuccessful trial under consideration.
 
 \end{minipage}}
  
-\caption[Table of ERTs]{\label{tab:ERTs320}\bbobpptablecaption{dimension $320$}
+\caption[Table of ERTs]{\label{tab:ERTs320}\bbobpptablecaption{dimension $320$} \cocoversion
 }
 \end{table*}
 
@@ -642,7 +642,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{minipage}}
 
 \caption{\label{tab:ERTs80}
-\bbobpptablesmanylegend{dimension $80$}
+\bbobpptablesmanylegend{dimension $80$} \cocoversion
 }
 \end{table*}
 
@@ -696,7 +696,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{minipage}}
 
 \caption{\label{tab:ERTs320}
-\bbobpptablesmanylegend{dimension $320$}
+\bbobpptablesmanylegend{dimension $320$} \cocoversion
 }
 \end{table*}
 
