--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -338,6 +338,7 @@ unsuccessful trial under consideration.
 \input{\bbobdatapath\algfolder pploglosstable_20D_noiselessall}
 \caption{\label{tab:ERTloss}%
 \bbobloglosstablecaption{}
+\cocoversion
 }
 \end{figure}
 
@@ -459,6 +460,7 @@ unsuccessful trial under consideration.
 \end{minipage}}
 
 \caption[Table of ERTs]{\label{tab:ERTs05}\bbobpptablecaption{dimension $5$}
+\cocoversion
 }
 \end{table*}
 
@@ -543,6 +545,7 @@ unsuccessful trial under consideration.
 \end{minipage}}
 
 \caption[Table of ERTs]{\label{tab:ERTs20}\bbobpptablecaption{dimension $20$}
+\cocoversion
 }
 \end{table*}
 
@@ -740,6 +743,7 @@ versus dimension in log-log presentation]{
 
 \caption{\label{tab:ERTs05}
 \bbobpptablesmanylegend{dimension $5$}
+\cocoversion
 }
 \end{table*}
 
@@ -794,6 +798,7 @@ versus dimension in log-log presentation]{
 
 \caption{\label{tab:ERTs20}
 \bbobpptablesmanylegend{dimension $20$}
+\cocoversion
 }
 \end{table*}
 
