--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -443,7 +443,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \end{minipage}}
 
- \caption[Table of ERTs]{\label{tab:ERTs5}\bbobpptablecaption{dimension $5$}
+ \caption[Table of ERTs]{\label{tab:ERTs5}\bbobpptablecaption{dimension $5$} \cocoversion
  }
 \end{table*}
 %sideways
@@ -595,7 +595,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \end{minipage}}
 
- \caption[Table of ERTs]{\label{tab:ERTs20}\bbobpptablecaption{dimension $20$}
+ \caption[Table of ERTs]{\label{tab:ERTs20}\bbobpptablecaption{dimension $20$} \cocoversion
  }
 \end{table*}
 
