--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -490,7 +490,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{minipage}}
 
  \caption{\label{tab:ERTs5}
- \bbobpptablesmanylegend{dimension $5$}
+ \bbobpptablesmanylegend{dimension $5$} \cocoversion
  }
 \end{table*}
 %sideways
@@ -644,7 +644,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{minipage}}
 
  \caption{\label{tab:ERTs20}
- \bbobpptablesmanylegend{dimension $20$}
+ \bbobpptablesmanylegend{dimension $20$}  \cocoversion
  }
 \end{table*}
 
