--- a/code-postprocessing/latex-templates/templateMIXINTarticle.tex
+++ b/code-postprocessing/latex-templates/templateMIXINTarticle.tex
@@ -312,7 +312,7 @@ unsuccessful trial under consideration.
 %\input{\bbobdatapath\algfolder pploglosstable_10D_noiselessall}\\
 %\input{\bbobdatapath\algfolder pploglosstable_40D_noiselessall}
 %\caption{\label{tab:ERTloss}%
-%\bbobloglosstablecaption{}
+%\bbobloglosstablecaption{} \cocoversion
 %}
 %\end{figure}
 
@@ -433,7 +433,7 @@ unsuccessful trial under consideration.
 
 \end{minipage}}
 
-\caption[Table of ERTs]{\label{tab:ERTs10}\bbobpptablecaption{dimension $10$}
+\caption[Table of ERTs]{\label{tab:ERTs10}\bbobpptablecaption{dimension $10$} \cocoversion
 }
 \end{table*}
 
@@ -517,7 +517,7 @@ unsuccessful trial under consideration.
 
 \end{minipage}}
 
-\caption[Table of ERTs]{\label{tab:ERTs40}\bbobpptablecaption{dimension $40$}
+\caption[Table of ERTs]{\label{tab:ERTs40}\bbobpptablecaption{dimension $40$} \cocoversion
 }
 \end{table*}
 
@@ -714,7 +714,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{minipage}}
 
 \caption{\label{tab:ERTs10}
-\bbobpptablesmanylegend{dimension $10$}
+\bbobpptablesmanylegend{dimension $10$} \cocoversion
 }
 \end{table*}
 
@@ -768,7 +768,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{minipage}}
 
 \caption{\label{tab:ERTs40}
-\bbobpptablesmanylegend{dimension $40$}
+\bbobpptablesmanylegend{dimension $40$} \cocoversion
 }
 \end{table*}
 
