--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -428,7 +428,7 @@ unsuccessful trial under consideration.
 \vspace{1em}
 
 \caption[Table of ERTs]{\label{tab:ERTs}
-\bbobpptablecaption{dimensions $5$ (left) and $20$ (right)}
+\bbobpptablecaption{dimensions $5$ (left) and $20$ (right)} \cocoversion
 }
 \end{table*}
 
@@ -449,7 +449,7 @@ unsuccessful trial under consideration.
 \input{\bbobdatapath\algfolder pploglosstable_05D_nzall}\\
 \input{\bbobdatapath\algfolder pploglosstable_20D_nzall}
 \caption{\label{tab:ERTloss}%
-\bbobloglosstablecaption{}
+\bbobloglosstablecaption{} \cocoversion
 }
 \end{figure}
 
@@ -668,7 +668,7 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 \end{tabularx}
 \end{minipage}}
  \caption{\label{tab:ERTs5}
-\bbobpptablesmanylegend{dimension $5$}
+\bbobpptablesmanylegend{dimension $5$} \cocoversion
 }
 \end{table*}
 
@@ -727,7 +727,7 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 \end{tabularx}
 \end{minipage}}
  \caption{\label{tab:ERTs20}
- \bbobpptablesmanylegend{dimension $20$}
+ \bbobpptablesmanylegend{dimension $20$} \cocoversion
  }
 \end{table*}
 
