--- a/test_new_bbob_constrained2.ipynb
+++ b/test_new_bbob_constrained2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bbob-constrained_f01_i01_d02: a 2-dimensional single-objective problem with 1 constraint (problem 0 of suite \"b'bbob-constrained'\" with name \"bbob-constrained_f001_i01_d02__bbob-constrained_f001_i01_d02\")\n"
+      "bbob-constrained_f001_i02_d02: a 2-dimensional single-objective problem with 1 constraint (problem 1 of suite \"b'bbob-constrained'\" with name \"bbob-constrained suite problem f1 instance 2 in 2D\")\n"
      ]
     }
    ],
    "source": [
-    "problem = suite.next_problem()\n",
+    "problem = suite[1]\n",
     "print(problem)"
    ]
   },
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-70069.78957393])"
+       "array([-671.43930546])"
       ]
      },
      "execution_count": 6,
@@ -86,7 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# p = suite[22]\n",
     "c_valsao = [problem.number_of_constraints for problem in s]\n",
     "c_vals = [problem.number_of_constraints for problem in suite]"
    ]
@@ -95,29 +94,44 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 720,\n",
+       "         3: 720,\n",
+       "         9: 720,\n",
+       "         10: 240,\n",
+       "         12: 240,\n",
+       "         18: 120,\n",
+       "         13: 120,\n",
+       "         22: 120,\n",
+       "         16: 240,\n",
+       "         31: 120,\n",
+       "         24: 240,\n",
+       "         54: 120,\n",
+       "         39: 240,\n",
+       "         99: 120,\n",
+       "         69: 120,\n",
+       "         189: 120})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Counter(c_valsao)"
+    "Counter(c_vals)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[Counter(c_valsao), Counter(c_vals)] == [Counter(\n",
+    "assert [Counter(c_valsao), Counter(c_vals)] == [Counter(\n",
     "        {1: 720,\n",
     "         2: 720,\n",
     "         6: 720,\n",
@@ -158,36 +172,81 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'suite_true' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-3a71a73ee2e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mproblem_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuite_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext_problem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproblem_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'suite_true' is not defined"
+     "data": {
+      "text/plain": [
+       "('bbob-constrained suite problem f2 instance 8 in 2D',\n",
+       " 'bbob-constrained_f002_i08_d02',\n",
+       " 'bbob-constrained-active-only suite problem f2 instance 8 in 2D',\n",
+       " 'bbob-constrained-active-only_f002_i08_d02')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = suite[22]\n",
+    "p2 = s[22]\n",
+    "p.name, p.id, p2.name, p2.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('BBOB suite problem f1 instance 2 in 2D', 'bbob_f001_i02_d02')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bbob = cocoex.Suite('bbob', '', '')\n",
+    "p = bbob[1]\n",
+    "p.name, p.id\n",
+    "#print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using file data/regression_test_2data_for_suite_bbob-constrained.py with 8640 test cases done in 5.3s\n"
      ]
     }
    ],
    "source": [
-    "problem_true = suite_true.next_problem()\n",
-    "print(problem_true)"
+    "%run code-experiments/test/regression-test/test_constrained_suite.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "problem_true.constraint(problem.initial_solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-671.4393054590993]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cons = lambda x: [problem.constraint(x)[0]]\n",
     "cons(problem.initial_solution)"
@@ -213,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
