added entry to COCO 2021 paper

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -14,7 +14,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
+\newcommand{\bbobdatapath}{ppdata-bbob-many/} % change default output folder of COCO if desired
 
 % Algorithm names as they appear in the tables, uncomment and adapt if necessary
 % \newcommand{\algAtables}{ALGO1}  % first argument in the post-processing
