removed further occurrences of gforge links, in particular to regression-tests

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1103,7 +1103,7 @@
   year = {2010},
   number = {2009/21 },
   country = {Austria},
-  url = {http://coco.gforge.inria.fr/bbob2010-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2010-downloads}
 }
 
 @TECHREPORT{wp200901,
@@ -1153,7 +1153,7 @@
 	{P}aris {S}ud - {P}aris {XI} },
   keywords = {optimization, benchmarking, black-box, software},
   language = {Anglais},
-  url = {http://coco.gforge.inria.fr/bbob2010-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2010-downloads}
 }
 
 @ARTICLE{fletcher1970bfgs,
@@ -1205,7 +1205,7 @@
   institution = {INRIA},
   year = {2012},
   country = {France},
-  url = {http://coco.gforge.inria.fr/bbob2012-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2012-downloads}
 }
 
 @TECHREPORT{hansen2010exp,
@@ -1216,7 +1216,7 @@
   year = {2010},
   number = {RR-7215},
   country = {France},
-  url = {http://coco.gforge.inria.fr/bbob2010-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2010-downloads}
 }
 
 @TECHREPORT{hansen2009exp,
@@ -1300,7 +1300,7 @@
   number = {RR-6869},
   note = {Updated February 2010},
   country = {France},
-  url = {http://coco.gforge.inria.fr/bbob2010-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2010-downloads}
 }
 
 @TECHREPORT{hansen2012fun,
@@ -1312,7 +1312,7 @@
   number = {RR-6829},
   note = {Updated February 2010},
   country = {France},
-  url = {http://coco.gforge.inria.fr/bbob2012-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2012-downloads}
 }
 
 @TECHREPORT{hansen2012noi,
@@ -1324,7 +1324,7 @@
   number = {RR-6869},
   note = {Updated February 2010},
   country = {France},
-  url = {http://coco.gforge.inria.fr/bbob2012-downloads}
+  url = {http://numbbo.github.io/gforge/bbob2012-downloads}
 }
 
 @INPROCEEDINGS{1830768,
@@ -1395,11 +1395,11 @@
 @MISC{Hornby:2009,
   author = {Hornby, Gregory S.},
   title = {The Age-Layered Population Structure ({ALPS}) Evolutionary Algorithm},
-  howpublished = {\url{http://coco.gforge.inria.fr/doku.php?id=bbob-2009-results}},
+  howpublished = {\url{https://numbbo.github.io/data-archive/bbob/}},
   month = {July},
   year = {2009},
   note = {Noiseless testbed},
-  url = {http://coco.gforge.inria.fr/doku.php?id=bbob-2009-results}
+  url = {https://numbbo.github.io/data-archive/bbob/}
 }
 
 @INPROCEEDINGS{Hornby:2009:steady,
@@ -1419,11 +1419,11 @@
 @MISC{Hornby:2009a,
   author = {Hornby, Gregory S.},
   title = {The Age-Layered Population Structure ({ALPS}) Evolutionary Algorithm},
-  howpublished = {\url{http://coco.gforge.inria.fr/doku.php?id=bbob-2009-results}},
+  howpublished = {\url{https://numbbo.github.io/data-archive/bbob/}},
   month = {July},
   year = {2009},
   note = {Noisy testbed},
-  url = {http://coco.gforge.inria.fr/doku.php?id=bbob-2009-results}
+  url = {https://numbbo.github.io/data-archive/bbob/}
 }
 
 @MISC{Huyer:2009,
