--- a/test_new_bbob_constrained.ipynb
+++ b/test_new_bbob_constrained.ipynb
@@ -2,67 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cocoex\n",
-    "import cocoexcons\n",
     "import numpy as np\n",
     "import cma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cocoex.known_suite_names.append(\"bbob-constrained\")\n",
-    "cocoexcons.known_suite_names.append(\"bbob-constrained\")"
+    "cocoex.known_suite_names.append(\"bbob-constrained\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#suite = cocoex.Suite(\"bbob-constrained\", \"\", \"dimensions:2,3,5 instance_indices:1\")\n",
-    "suite = cocoexcons.Suite(\"bbob-constrained\", \"\", \"dimensions:2,3,5 instance_indices:1\")\n",
-    "suite_true = cocoex.Suite(\"bbob-constrained\", \"\", \"dimensions:2,3,5 instance_indices:1\")"
+    "suite = cocoex.Suite(\"bbob-constrained\", \"\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bbob-constrained_f02_i01_d02: a 2-dimensional single-objective problem with 3 constraints (problem 15 of suite \"b'bbob-constrained'\" with name \"bbob-constrained_f002_i01_d02__bbob-constrained_f02_i01_d02\")\n"
+      "bbob-constrained_f050_i04_d03: a 3-dimensional single-objective problem with 3 constraints (problem 1548 of suite \"b'bbob-constrained'\" with name \"bbob-constrained suite problem f50 instance 4 in 3D\")\n"
      ]
     }
    ],
    "source": [
-    "problem = suite.next_problem()\n",
+    "#problem = suite.next_problem()\n",
+    "problem=suite.get_problem_by_function_dimension_instance(50, 3, 4)\n",
     "print(problem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.05352753e+05, -2.38101022e+04, -1.33724424e+09])"
+       "array([-36555.4709516 , -48629.5180831 , -14324.69205331])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,140 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bbob-constrained_f02_i01_d02: a 2-dimensional single-objective problem with 3 constraints (problem 15 of suite \"b'bbob-constrained'\" with name \"bbob-constrained_f002_i01_d02__bbob-constrained_f02_i01_d02\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "problem_true = suite_true.next_problem()\n",
-    "print(problem_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.05352753e+05, -1.85609863e+04, -1.33710361e+10])"
+       "array([ 0.904 , -1.4944,  1.4664])"
       ]
      },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "problem_true.constraint(problem.initial_solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-105352.75290616427]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cons = lambda x: [problem.constraint(x)[0]]\n",
-    "cons(problem.initial_solution)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Optimize with AL-CMA-ES\n",
-    "\n",
-    "Observations:\n",
-    "- It looks like AL-CMA-ES fails with bbob-constrained_f02_i01_d02\n",
-    "\n",
-    "\n",
-    "> termination on tolfun=1e-11 (Tue Mar 30 11:00:33 2021)   \n",
-    "> final/bestever f-value = -2.051697e+02 -3.724878e+03   \n",
-    "> incumbent solution: [0.20994942204755762, 1.749706536023543]   \n",
-    "> std deviation: [6.440723208130416e-08, 8.407068706938153e-08]   \n",
-    "> `>>> problem.constraint(es.mean)`   \n",
-    "> array([ 6.12202712e-07,  5.50827651e+03, -1.33705184e+09])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3_w,6)-aCMA-ES (mu_w=2.0,w_1=63%) in dimension 2 (seed=196192, Tue Mar 30 11:00:32 2021)\n",
-      "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
-      "    1      6 -1.163138649051540e+02 1.4e+00 1.32e+00  1e+00  2e+00 0:00.0\n",
-      "    2     12 2.817745294484139e+06 1.9e+00 1.73e+00  2e+00  3e+00 0:00.1\n",
-      "    3     18 2.528748733507459e+06 1.6e+00 2.05e+00  2e+00  3e+00 0:00.1\n",
-      "  100    600 -2.051696671261400e+02 7.5e+02 1.15e-03  2e-05  3e-05 0:00.4\n",
-      "  139    834 -2.051696671297151e+02 9.8e+03 1.98e-05  6e-08  8e-08 0:00.6\n",
-      "termination on tolfun=1e-11 (Tue Mar 30 11:00:33 2021)\n",
-      "final/bestever f-value = -2.051697e+02 -3.724878e+03\n",
-      "incumbent solution: [0.20994942204755762, 1.749706536023543]\n",
-      "std deviation: [6.440723208130416e-08, 8.407068706938153e-08]\n"
-     ]
-    }
-   ],
-   "source": [
-    "res, es = cma.fmin_con(problem, [10]*problem.dimension, 1, g=cons, al_params={\"k1\":100, \"chi_domega\":2})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6.12202712e-07,  5.50827651e+03, -1.33705184e+09])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "problem.constraint(es.mean)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.2072, 0.448 ])"
-      ]
-     },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.00000000e+00,  0.00000000e+00, -1.33708799e+09])"
+       "array([     0.        , -11577.06839467,      0.        ])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-202.48071808"
+       "1039.8999999999999"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,23 +132,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## in a small neighbourhood around the optimum"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-205.16966713049578"
+       "array([ 2.1152, -0.1048,  3.8176])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "problem(es.mean)"
+    "es.mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3_w,7)-aCMA-ES (mu_w=2.3,w_1=58%) in dimension 3 (seed=916043, Thu Nov 25 16:45:16 2021)\n",
+      "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
+      "    1      7 1.039892947667564e+03 1.3e+00 1.12e-04  1e-04  1e-04 0:00.0\n",
+      "    2     14 1.039897169608854e+03 1.7e+00 1.13e-04  1e-04  1e-04 0:00.0\n",
+      "    3     21 1.039897243003969e+03 1.4e+00 1.07e-04  9e-05  1e-04 0:00.0\n",
+      "  100    700 1.039900000000001e+03 5.1e+00 5.50e-07  6e-09  2e-08 0:00.2\n",
+      "  114    798 1.039900000000000e+03 4.1e+00 2.12e-07  2e-09  3e-09 0:00.2\n",
+      "termination on tolfun=1e-11 (Thu Nov 25 16:45:16 2021)\n",
+      "final/bestever f-value = 1.039900e+03 1.039893e+03\n",
+      "incumbent solution: [0.9039999990462141, -1.4944000005808853, 1.4664000007870885]\n",
+      "std deviation: [1.6047620931201242e-09, 1.6403401785853877e-09, 2.762401266328436e-09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res, es = cma.fmin_con(problem, _xopt, 1e-4, g=problem.constraint)\n",
+    "\n",
+    "assert np.allclose(_xopt, es.mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## global opt. with large popsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50_w,100)-aCMA-ES (mu_w=27.0,w_1=8%) in dimension 3 (seed=969639, Thu Nov 25 16:45:18 2021)\n",
+      "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
+      "    1    100 1.439600659321915e+03 1.3e+00 9.98e+00  5e+00  6e+00 0:00.0\n",
+      "    2    200 1.431523632901248e+03 1.5e+00 1.27e+01  4e+00  6e+00 0:00.0\n",
+      "    3    300 1.408672339704766e+03 1.7e+00 1.27e+01  3e+00  3e+00 0:00.0\n",
+      "   44   4400 1.089446012414870e+03 2.1e+00 5.31e+00  1e-09  2e-09 0:00.5\n",
+      "termination on tolflatfitness=1 (Thu Nov 25 16:45:19 2021)\n",
+      "final/bestever f-value = 1.089446e+03 1.042971e+03\n",
+      "incumbent solution: [0.5991726986183304, -2.385391896609955, 1.0907410332933112]\n",
+      "std deviation: [1.3341055481774753e-09, 1.2261984419125736e-09, 2.3540935128456835e-09]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.89121988, -1.51872357,  1.45281899]),\n",
+       " <cma.evolution_strategy.CMAEvolutionStrategy at 0x7fc847e1e880>)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opts = cma.CMAOptions()\n",
+    "opts.set(\"popsize\", 100)\n",
+    "\n",
+    "cma.fmin_con(problem, np.ones(problem.dimension), 10, g=problem.constraint, options=opts)"
    ]
   },
   {
