update of LaTeX templates for BBOB-2022 workshop

--- a/code-postprocessing/latex-templates/templateMIXINTarticle.tex
+++ b/code-postprocessing/latex-templates/templateMIXINTarticle.tex
@@ -177,7 +177,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{\a
 
 Results from experiments according to \cite{hansen2016exp} and
 \cite{hansen2016perfass} on the benchmark functions given in 
-\TODO{\cite{tusar2019}} are presented in
+\cite{tusar2019mixint} are presented in
 %%
 \ifthenelse{\equal{\numofalgs}{1}}{
 Figures~\ref{fig:ERTgraphs} and \ref{fig:ECDFsingleOne} and Tables~\ref{tab:ERTs10} and \ref{tab:ERTs40}.
