--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
+@article{dufosse2022constrained,
+  title={Building scalable test problems for benchmarking constrained optimizers},
+  author={Dufoss\'e, Paul and Atamna, Asma and Sampaio, Philippe R, and Brockhoff, Dimo and Hansen, Nikolaus and Auger, Anne},
+  journal={?},
+  volume={?},
+  pages={?},
+  year={2022},
+  publisher={?}
+}
+
 @article{varelas2020benchmarking,
   title={Benchmarking large-scale continuous optimizers: the bbob-largescale testbed, a COCO software guide and beyond},
   author={Varelas, Konstantinos and El Hara, Ouassim Ait and Brockhoff, Dimo and Hansen, Nikolaus and Nguyen, Duc Manh and Tu{\v{s}}ar, Tea and Auger, Anne},
