add remaining ECDFs single function plots in many-alg version

--- a/code-postprocessing/latex-templates/templateBBOBconstrained.tex
+++ b/code-postprocessing/latex-templates/templateBBOBconstrained.tex
@@ -14,7 +14,7 @@
 % \newcommand{\algDtables}{ALGO4}  % forth argument in the post-processing
 % ...
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
+\newcommand{\bbobdatapath}{ppdata2/} % change default output folder of COCO if desired
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -714,7 +714,7 @@ Scaling of ERT divided by dimension with the number of constraints for all nine 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% ECDFs per function in dimension 10, part I
+% ECDFs per function in dimension 20, part I
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
@@ -754,7 +754,46 @@ Scaling of ERT divided by dimension with the number of constraints for all nine 
 \includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f030_20D}\\
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
-	\bbobecdfcaptionsinglefunctionssingledim{20}
+	\bbobecdfcaptionsinglefunctionssingledim{20 and problem IDs 1 to 30}
+}
+\end{figure*}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% ECDFs per function in dimension 20, part II
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure*}
+\centering
+\begin{tabular}{@{}l@{}l@{}l@{}l@{}l@{}}
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f031_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f037_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f043_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f049_20D}\\
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f032_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f038_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f044_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f050_20D}\\
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f033_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f039_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f045_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f051_20D}\\
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f034_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f040_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f046_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f052_20D}\\
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f035_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f041_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f047_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f053_20D}\\
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f036_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f042_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f048_20D}&
+\includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f054_20D}\\
+\end{tabular}
+ \caption{\label{fig:ECDFsingleOne}
+   \bbobecdfcaptionsinglefunctionssingledim{20 and problem IDs 31 to 54}
 }
 \end{figure*}
 
