format more captions in ppfigs and ppfigcons

--- a/code-postprocessing/latex-templates/templateBBOBconstrained.tex
+++ b/code-postprocessing/latex-templates/templateBBOBconstrained.tex
@@ -14,7 +14,7 @@
 % \newcommand{\algDtables}{ALGO4}  % forth argument in the post-processing
 % ...
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata2/} % change default output folder of COCO if desired
+\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
