reverse order in 1-algorithm template

--- a/code-postprocessing/latex-templates/templateBBOBconstrained.tex
+++ b/code-postprocessing/latex-templates/templateBBOBconstrained.tex
@@ -442,86 +442,76 @@ unsuccessful trial under consideration.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
 \centering
-\begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f001}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f002}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f003}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f004}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f005}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f006}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f007}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f008}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f009}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f010}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f011}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f012}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f013}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f014}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f015}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f016}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f017}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f018}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f019}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f020}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f021}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f022}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f023}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f024}
+\begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l}
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f001}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f007}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f013}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f019}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f025}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f002}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f008}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f014}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f020}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f026}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f003}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f009}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f015}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f021}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f027}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f004}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f010}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f016}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f022}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f028}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f005}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f011}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f017}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f023}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f029}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f006}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f012}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f018}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f024}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f030}
 \vspace*{-1ex}
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
-	\bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40 and problem IDs 1 to 24}
+	\bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40 and problem IDs 1 to 30}
 }
 \end{figure*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
 \centering
-\begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f025}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f026}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f027}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f028}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f029}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f030}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f031}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f032}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f033}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f034}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f035}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f036}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f037}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f038}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f039}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f040}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f041}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f042}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f043}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f044}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f045}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f046}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f047}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f048}
+\begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}l@{\hspace*{-0.00\textwidth}}l}
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f031}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f037}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f043}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f049}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f032}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f038}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f044}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f050}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f033}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f039}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f045}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f051}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f034}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f040}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f046}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f052}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f035}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f042}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f048}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f052}\\[-0.2em]
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f036}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f042}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f048}&
+\includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f054}
 \vspace*{-1ex}
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
-   \bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40 and problem IDs 25 to 48}
-}
-\end{figure*}
-
-\begin{figure*}
-\centering
-\begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f049}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f050}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f051}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f052}\\[-0.2em]
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f053}&
-\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_f054}
-\vspace*{-1ex}
-\end{tabular}
- \caption{\label{fig:ECDFsingleOne}
-   \bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40 and problem IDs 49 to 54.}
+   \bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40 and problem IDs 31 to 54}
 }
 \end{figure*}
 
